imported components to app, fixed responsiveness for shifting text bar

--- a/src/main.css
+++ b/src/main.css
@@ -92,11 +92,9 @@ body {
 }
 
 .title_buttons {
-  margin: 1rem 1.5rem 0 0;
-  justify-content: center;
-  align-items: center;
-}
+  margin: 4rem 1.5rem 0 0;
 
+}
 
 .searchbar_button {
   background-image: url('./assets/navbuttons_assets/searchbar_icon/bone_magnihover.gif');
